crates/old_parsing/tests/snapshots/grammar_tests__expect_parse@empty-do-in-operator.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/failing/expression/empty-do-in-operator.input
---
Input: do + 0

Start { kind: ExpressionOperatorChain }
  Start { kind: DoExpression }
    Start { kind: QualifiedDo }
      Token { kind: DoKw }
    Finish
    Error { message: "expected DoStatement" }
  Finish
  Start { kind: OneOrMore }
    Start { kind: Pair }
      Token { kind: Operator }
      Start { kind: LiteralExpression }
        Token { kind: LiteralInteger }
      Finish
    Finish
  Finish
Finish

