crates/old_parsing/tests/snapshots/grammar_tests__expect_parse@false-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/false-binder.input
---
Input: false
Start { kind: LiteralBinder }
  Token { kind: LiteralFalse }
Finish

