crates/old_parsing/tests/snapshots/grammar_tests__expect_parse@integer-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/integer-binder.input
---
Input: 1
Start { kind: LiteralBinder }
  Token { kind: LiteralInteger }
Finish

