crates/old_parsing/tests/snapshots/grammar_tests__expect_parse@invalid-record-pun.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/failing/expression/invalid-record-pun.input
---
Input: { "a" }

Start { kind: LiteralExpression }
  Start { kind: LiteralRecord }
    Token { kind: LeftBracket }
    Start { kind: Separated }
      Start { kind: RecordField }
        Start { kind: Name }
          Token { kind: Label }
        Finish
        Error { message: "expected Colon" }
        Error { message: "expected Expression" }
      Finish
    Finish
    Token { kind: RightBracket }
  Finish
Finish

